--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/contracts": "^8.37",
-        "spatie/laravel-package-tools": "^1.4"
+        "illuminate/contracts": "^8.37"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
+        "livewire/livewire": "^2.5",
         "nunomaduro/collision": "^5.3",
         "orchestra/testbench": "^6.15",
         "phpunit/phpunit": "^9.3",
@@ -32,8 +32,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Rawilk\\LaravelBase\\": "src",
-            "Rawilk\\LaravelBase\\Database\\Factories\\": "database/factories"
+            "Rawilk\\LaravelBase\\": "src"
         }
     },
     "autoload-dev": {
@@ -54,10 +53,7 @@
         "laravel": {
             "providers": [
                 "Rawilk\\LaravelBase\\LaravelBaseServiceProvider"
-            ],
-            "aliases": {
-                "LaravelBase": "Rawilk\\LaravelBase\\Facades\\LaravelBaseFacade"
-            }
+            ]
         }
     },
     "minimum-stability": "dev",
