--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/contracts": "^8.37"
+        "illuminate/contracts": "^8.37",
+        "illuminate/support": "8.37"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
