--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -13,7 +13,7 @@ jobs:
                     ref: ${{ github.head_ref }}
 
             -   name: Run PHP CS Fixer
-                uses: docker://oskarstark/php-cs-fixer-ga
+                uses: OskarStark/php-cs-fixer-ga@master
                 with:
                     args: --config=.php_cs.dist.php --allow-risky=yes
 
