--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,20 +11,10 @@
          verbose="true"
 >
     <testsuites>
-        <testsuite name="Rawilk Test Suite">
+        <testsuite name="laravel-base Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
-    <coverage>
-        <include>
-            <directory suffix=".php">./src</directory>
-        </include>
-        <report>
-            <html outputDirectory="build/coverage"/>
-            <text outputFile="build/coverage.txt"/>
-            <clover outputFile="build/logs/clover.xml"/>
-        </report>
-    </coverage>
     <php>
         <server name="DB_CONNECTION" value="sqlite"/>
         <server name="DB_DATABASE" value=":memory:"/>
