Make description required

--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -12,3 +12,5 @@ body:
       attributes:
           label: Feature Description
           description: How should this feature look like?
+      validations:
+          required: true
