--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": "^8.0",
         "illuminate/contracts": "^8.37",
-        "illuminate/support": "8.37"
+        "illuminate/support": "^8.37"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
