--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "phpunit/phpunit": "^9.3",
         "psalm/plugin-laravel": "^1.5",
         "spatie/laravel-ray": "^1.24",
+        "spatie/phpunit-snapshot-assertions": "^4.2",
         "vimeo/psalm": "^4.8"
     },
     "autoload": {
