--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -14,6 +14,10 @@
         </ignoreFiles>
     </projectFiles>
 
+    <issueHandlers>
+        <NoInterfaceProperties errorLevel="suppress" />
+    </issueHandlers>
+
     <plugins>
         <pluginClass class="Psalm\LaravelPlugin\Plugin"/>
     </plugins>
