--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,12 @@
     ],
     "require": {
         "php": "^8.0",
+        "bacon/bacon-qr-code": "^2.0",
+        "danharrin/livewire-rate-limiting": "^0.3.0",
         "illuminate/contracts": "^8.56",
-        "illuminate/support": "^8.56"
+        "illuminate/support": "^8.56",
+        "jenssegers/agent": "^2.6",
+        "pragmarx/google2fa": "^8.0"
     },
     "require-dev": {
         "blade-ui-kit/blade-heroicons": "^1.2",
@@ -29,6 +33,7 @@
         "orchestra/testbench": "^6.6",
         "phpunit/phpunit": "^9.5",
         "psalm/plugin-laravel": "^1.5",
+        "rawilk/laravel-casters": "^2.0",
         "rawilk/laravel-form-components": "^6.0",
         "spatie/laravel-ray": "^1.25",
         "spatie/phpunit-snapshot-assertions": "^4.2",
@@ -70,6 +75,7 @@
         "blade-ui-kit/blade-heroicons": "Needed for the icons used in this package.",
         "khatabwedaa/blade-css-icons": "Needed for the icons used in this package.",
         "livewire/livewire": "Needed to make use of certain helpers and macros from this package.",
+        "rawilk/laravel-casters": "Required for the User stub that comes with this package.",
         "rawilk/laravel-form-components": "Necessary for certain blade components in this package to work properly."
     },
     "minimum-stability": "dev",
