--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,6 +16,7 @@
         </testsuite>
     </testsuites>
     <php>
+        <server name="APP_KEY" value="base64:7aiTFU4BnQINlNC7fMntr1dMAoEFVBLuMbqLGOJiOUU="/>
         <server name="DB_CONNECTION" value="sqlite"/>
         <server name="DB_DATABASE" value=":memory:"/>
     </php>
