--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,10 @@
     },
     "require-dev": {
         "blade-ui-kit/blade-heroicons": "^1.2",
+        "doctrine/dbal": "^3.1",
         "friendsofphp/php-cs-fixer": "^3.0",
         "livewire/livewire": "^2.5",
+        "mockery/mockery": "^1.4",
         "nunomaduro/collision": "^5.9",
         "orchestra/testbench": "^6.6",
         "phpunit/phpunit": "^9.5",
