--- a/composer.json
+++ b/composer.json
@@ -32,16 +32,15 @@
         "friendsofphp/php-cs-fixer": "^3.0",
         "livewire/livewire": "^2.5",
         "mockery/mockery": "^1.4",
-        "nunomaduro/collision": "^5.9",
-        "orchestra/testbench": "^6.6",
+        "nunomaduro/collision": "^5.0|^6.2",
+        "orchestra/testbench": "^6.6|^7.4",
         "phpunit/phpunit": "^9.5",
         "psalm/plugin-laravel": "^1.5",
         "rawilk/laravel-casters": "^2.0",
         "rawilk/laravel-form-components": "^7.0.0-alpha.1",
         "spatie/laravel-permission": "^5.1",
         "spatie/laravel-ray": "^1.25",
-        "spatie/phpunit-snapshot-assertions": "^4.2",
-        "vimeo/psalm": "^4.8"
+        "spatie/phpunit-snapshot-assertions": "^4.2"
     },
     "autoload": {
         "psr-4": {
