--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,12 @@
         "php": "^8.1",
         "bacon/bacon-qr-code": "^2.0",
         "danharrin/livewire-rate-limiting": "^1.0.0",
-        "illuminate/contracts": "^8.56|^9.0",
-        "illuminate/support": "^8.56|^9.0",
+        "illuminate/contracts": "^9.12",
+        "illuminate/support": "^9.12",
         "jenssegers/agent": "^2.6",
         "maatwebsite/excel": "^3.1",
-        "pragmarx/google2fa": "^8.0"
+        "pragmarx/google2fa": "^8.0",
+        "rawilk/laravel-webauthn": "^1.0"
     },
     "require-dev": {
         "blade-ui-kit/blade-heroicons": "^1.2",
@@ -32,12 +33,11 @@
         "friendsofphp/php-cs-fixer": "^3.0",
         "livewire/livewire": "^2.5",
         "mockery/mockery": "^1.4",
-        "nunomaduro/collision": "^5.0|^6.2",
-        "orchestra/testbench": "^6.6|^7.4",
+        "nunomaduro/collision": "^6.0",
+        "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "^9.5",
-        "psalm/plugin-laravel": "^1.5",
         "rawilk/laravel-casters": "^2.0",
-        "rawilk/laravel-form-components": "^7.0.0-alpha.1",
+        "rawilk/laravel-form-components": "^7.0.0",
         "spatie/laravel-permission": "^5.1",
         "spatie/laravel-ray": "^1.25",
         "spatie/phpunit-snapshot-assertions": "^4.2"
