Convert tests to Pest

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,7 +18,7 @@ jobs:
                 laravel: [9.*]
                 stability: [prefer-lowest, prefer-stable]
                 include:
-                    -   laravel: ^9.12
+                    -   laravel: 9.*
                         testbench: 7.*
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }}
