--- a/.gitattributes
+++ b/.gitattributes
@@ -8,12 +8,14 @@
 /.gitignore         export-ignore
 /.php_cs.dist.php   export-ignore
 /.travis.yml        export-ignore
-/docs               export-ignore
-/phpunit.xml.dist   export-ignore
-/psalm.xml.dist     export-ignore
-/tests              export-ignore
-/testbench.yaml     export-ignore
-/webpack.mix.js     export-ignore
-/package.json       export-ignore
-/package-lock.json  export-ignore
 /bin                export-ignore
+/docs               export-ignore
+/package-lock.json  export-ignore
+/package.json       export-ignore
+/phpunit.xml.dist   export-ignore
+/pint.json          export-ignore
+/psalm.xml.dist     export-ignore
+/testbench.yaml     export-ignore
+/tests              export-ignore
+/vite.config.js     export-ignore
+/webpack.mix.js     export-ignore
