--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,10 @@
         "illuminate/contracts": "^9.0",
         "illuminate/support": "^9.0",
         "jenssegers/agent": "^2.6",
+        "league/csv": "^9.8",
         "maatwebsite/excel": "^3.1",
         "pragmarx/google2fa": "^8.0",
+        "psr/simple-cache": "^2.0",
         "rawilk/laravel-webauthn": "^1.0",
         "spatie/laravel-package-tools": "^1.12"
     },
@@ -35,12 +37,14 @@
         "livewire/livewire": "^2.10.7",
         "mockery/mockery": "^1.5",
         "nunomaduro/collision": "^6.2.1",
+        "orchestra/canvas": "^7.2",
         "orchestra/testbench": "^7.6.1",
         "pestphp/pest": "^1.21.3",
         "pestphp/pest-plugin-laravel": "^1.2",
         "pestphp/pest-plugin-parallel": "^1.2",
         "rawilk/laravel-casters": "^2.0.2",
         "rawilk/laravel-form-components": "^7.1.3",
+        "rawilk/laravel-stubs": "^1.1",
         "spatie/laravel-permission": "^5.5.5",
         "spatie/laravel-ray": "^1.30"
     },
