--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,11 +14,13 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [8.1]
+                php: [8.2, 8.1]
                 laravel: [9.*]
                 stability: [prefer-stable]
                 # stability: [prefer-lowest, prefer-stable]
                 include:
+                    -   laravel: 10.*
+                        testbench: 8.*
                     -   laravel: 9.*
                         testbench: 7.*
 
