--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         "php": "^8.1",
         "bacon/bacon-qr-code": "^2.0",
         "danharrin/livewire-rate-limiting": "^1.0",
-        "illuminate/contracts": "^9.0",
-        "illuminate/support": "^9.0",
+        "illuminate/contracts": "^9.0|^10.0",
+        "illuminate/support": "^9.0|^10.0",
         "jenssegers/agent": "^2.6",
         "league/csv": "^9.8",
         "maatwebsite/excel": "^3.1",
@@ -33,12 +33,12 @@
     "require-dev": {
         "blade-ui-kit/blade-heroicons": "^1.3.1",
         "doctrine/dbal": "^3.4.1",
-        "laravel/pint": "^1.1.1",
+        "laravel/pint": "^1.5",
         "livewire/livewire": "^2.10.7",
         "mockery/mockery": "^1.5",
         "nunomaduro/collision": "^6.2.1",
         "orchestra/canvas": "^7.2",
-        "orchestra/testbench": "^7.6.1",
+        "orchestra/testbench": "^7.6.1|^8.0",
         "pestphp/pest": "^1.21.3",
         "pestphp/pest-plugin-laravel": "^1.2",
         "pestphp/pest-plugin-parallel": "^1.2",
@@ -64,7 +64,7 @@
     },
     "scripts": {
         "test": "vendor/bin/pest -p",
-        "format": "vendor/bin/pint"
+        "format": "vendor/bin/pint --dirty"
     },
     "config": {
         "sort-packages": true,
