--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,7 +15,7 @@ jobs:
             fail-fast: true
             matrix:
                 php: [8.2, 8.1]
-                laravel: [9.*]
+                laravel: [10.*, 9.*]
                 stability: [prefer-stable]
                 # stability: [prefer-lowest, prefer-stable]
                 include:
