--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "pestphp/pest": "^1.21.3",
         "pestphp/pest-plugin-laravel": "^1.2",
         "pestphp/pest-plugin-parallel": "^1.2",
-        "rawilk/laravel-casters": "^2.0.2",
+        "rawilk/laravel-casters": "^2.0.2|^3.0.1",
         "rawilk/laravel-form-components": "^7.1.3",
         "rawilk/laravel-stubs": "^1.1",
         "spatie/laravel-permission": "^5.5.5",
