--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,14 +15,12 @@ jobs:
             fail-fast: true
             matrix:
                 php: [8.1]
-                laravel: [10.*, 9.*]
+                laravel: [10.*]
                 stability: [prefer-stable]
                 # stability: [prefer-lowest, prefer-stable]
                 include:
                     -   laravel: 10.*
                         testbench: 8.*
-                    -   laravel: 9.*
-                        testbench: 7.*
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }}
 
@@ -45,4 +43,4 @@ jobs:
                     composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
             -   name: Execute tests
-                run: vendor/bin/pest -p
+                run: vendor/bin/pest --parallel
