--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,7 +14,7 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [8.1]
+                php: [8.2, 8.1]
                 laravel: [10.*]
                 stability: [prefer-stable]
                 # stability: [prefer-lowest, prefer-stable]
