--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
     "private": true,
     "scripts": {
-        "build": "npx mix --production",
-        "dev": "npx mix",
-        "watch": "npx mix watch"
+        "build": "npx rollup -c",
+        "watch": "npx rollup -c -w"
     },
     "author": "Randall Wilk",
     "license": "MIT",
     "devDependencies": {
-        "laravel-mix": "^6.0.49"
+        "@babel/core": "^7.21.3",
+        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+        "@babel/preset-env": "^7.20.2",
+        "@rollup/plugin-babel": "^6.0.3",
+        "@rollup/plugin-commonjs": "^24.0.1",
+        "@rollup/plugin-node-resolve": "^15.0.1",
+        "fs-extra": "^11.1.1",
+        "md5": "^2.3.0",
+        "rollup": "^2.79.1",
+        "rollup-plugin-filesize": "^10.0.0",
+        "rollup-plugin-output-manifest": "^2.0.0",
+        "rollup-plugin-terser": "^7.0.2"
     }
 }
